--- a/Charts/chart_exemple/templates/deployment.yaml
+++ b/Charts/chart_exemple/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: front-test-app
+  name: test-frontapp
   namespace: {{ .Values.namespace }}
 spec:
   replicas: 1
